# practica-algorismia

./: .gitignore  CMakeLists.txt  Makefile  README.md  Results1.txt  com.txt  file.txt  input.txt  main.cpp  results.txt  time.csv  time2.csv
control/: Algorithm.cpp  Algorithm.h  AlgorithmVersion2.cpp  Solver.cpp  Solver.h
src/: Main.cpp  main.cpp
src/algorithm/: EKAlgoritm.cpp  EKAlgoritm.h
src/classes/: Edge.cpp  Edge.h  Flight.cpp  Flight.h  Flight.h.gch  Network.cpp  Network.h  Node.cpp  Node.h  Pilot.cpp  Pilot.h  Problem.cpp  Problem.h  Transition.cpp  Transition.h
src/control/: AlgorithmVersion1.cpp  AlgorithmVersion1.h  AlgorithmVersion2.h  Solver.cpp  Solver.h
src/problem/: Solver.cpp  Solver.h  SolverBi.cpp  SolverBi.h  SolverCir.cpp  SolverCir.h
